--- a/rootdir/init.rk30board.rc
+++ b/rootdir/init.rk30board.rc
@@ -19,12 +19,14 @@ on init
     symlink /mnt/shell/emulated/0 /storage/emulated/legacy
 
     # External SD card
+    mkdir /mnt/media_rw/sdcard1 0775 system system
     mkdir /storage/sdcard1 0775 system system
     export SECOND_VOLUME_STORAGE /storage/sdcard1
     symlink /storage/sdcard1 /mnt/external_sd
     symlink /storage/sdcard1 /external_sd
 
     # USB OTG drive
+    mkdir /mnt/media_rw/usbdisk0 0775 system system
     mkdir /storage/usbdisk0 0775 system system
     export THIRD_VOLUME_STORAGE /storage/usbdisk0
     symlink /storage/usbdisk0 /mnt/usb_storage
@@ -101,17 +103,27 @@ on boot
     chown gps system /data/gps
 
 
-# Virtual sdcard daemon running as media_rw (1023)
-service sdcard /system/bin/sdcard /data/media /mnt/shell/emulated 1023 1023
-    class main
-
 # Rockchip init
 service rk3xxx /system/bin/sh /system/bin/rk3xxx
     class main
 
+# Virtual sdcard daemon running as media_rw (1023)
+service sdcard /system/bin/sdcard -u 1023 -g 1023 -l /data/media /mnt/shell/emulated
+    class main
+
+service fuse_sdcard1 /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/sdcard1 /storage/sdcard1
+    class late_start
+    disabled
+
+service fuse_usbdisk0 /system/bin/sdcard -u 1023 -g 1023 /mnt/media_rw/usbdisk0 /storage/usbdisk0
+    class late_start
+    disabled
+
 service wpa_supplicant /system/bin/wpa_supplicant \
-    -Dnl80211 -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf
-    #-Dnl80211 -iwlan0 -puse_p2p_group_interface=1 -e/data/misc/wifi/entropy.bin
+    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
+    -O/data/misc/wifi/sockets \
+    -e/data/misc/wifi/entropy.bin -g@android:wpa_wlan0
+    #-I/system/etc/wifi/wpa_supplicant_overlay.conf \
     #   we will start as root and wpa_supplicant will switch to user wifi
     #   after setting up the capabilities required for WEXT
     #   user wifi
@@ -122,8 +134,14 @@ service wpa_supplicant /system/bin/wpa_supplicant \
     oneshot
 
 service p2p_supplicant /system/bin/wpa_supplicant \
-    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -N \
-    -ip2p0 -Dnl80211 -c/data/misc/wifi/p2p_supplicant.conf -e/data/misc/wifi/entropy.bin -puse_p2p_group_interface=1
+    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
+    -O/data/misc/wifi/sockets \
+    -puse_multi_chan_concurrent=1 -N -ip2p0 -Dnl80211 \
+    -c/data/misc/wifi/p2p_supplicant.conf \
+    -puse_p2p_group_interface=1use_multi_chan_concurrent=1 \
+    -e/data/misc/wifi/entropy.bin -g@android:wpa_wlan0
+    #-I/system/etc/wifi/wpa_supplicant_overlay.conf \
+    #-I/system/etc/wifi/p2p_supplicant_overlay.conf \
     #   we will start as root and wpa_supplicant will switch to user wifi
     #   after setting up the capabilities required for WEXT
     #   user wifi
