--- a/rootdir/init.rk30board.rc
+++ b/rootdir/init.rk30board.rc
@@ -1,8 +1,5 @@
 import init.rk30board.usb.rc
 
-on early-init
-    mount debugfs debugfs /sys/kernel/debug
-
 on init
     # See storage config details at http://source.android.com/tech/storage/
     mkdir /mnt/shell/emulated 0700 shell shell
@@ -50,6 +47,8 @@ on post-fs-data
     setprop vold.post_fs_data_done 1
 
 on boot
+    mount debugfs debugfs /sys/kernel/debug
+
     chown system system /sys/devices/system/cpu/cpu1/online
     chmod 0660 /sys/devices/system/cpu/cpu1/online
 	
@@ -70,36 +69,45 @@ on boot
     chown root system /sys/class/graphics/fb0/blank
     chmod 0664 /sys/class/graphics/fb0/blank
 
-    # Bluetooth
+    # Bluetooth: UART device
     chmod 0660 /dev/ttyS0
     chmod 0660 /dev/vflash
     chown bluetooth net_bt_stack /dev/ttyS0
     chown bluetooth net_bt_stack /dev/vflash
 
+    # Bluetooth: power up/down interface
     chmod 0660 /sys/class/rfkill/rfkill0/state
     chmod 0660 /sys/class/rfkill/rfkill0/type
     chown bluetooth net_bt_stack /sys/class/rfkill/rfkill0/state
     chown bluetooth net_bt_stack /sys/class/rfkill/rfkill0/type
 
+    # Bluetooth: MAC address programming
     chown bluetooth net_bt_stack /data/misc/bluetooth
     chown bluetooth net_bt_stack ro.bt.bdaddr_path
     setprop ro.bt.bdaddr_path "/data/misc/bluetooth/bt_addr"
+
+    # Bluetooth LPM
+    chmod 0220 /proc/bluetooth/sleep/lpm
+    chmod 0220 /proc/bluetooth/sleep/btwrite
+    chown bluetooth net_bt_stack /proc/bluetooth/sleep/lpm
+    chown bluetooth net_bt_stack /proc/bluetooth/sleep/btwrite
     
     # GPS
-    write /sys/class/gpio/export 316             # GPS reset
-    write /sys/class/gpio/export 315             # GPS standby
-    write /sys/class/gpio/gpio316/direction out
-    write /sys/class/gpio/gpio315/direction out
-    write /sys/class/gpio/gpio316/value 1
-    write /sys/class/gpio/gpio315/value 0
-    chmod 0664 /sys/class/gpio/gpio315/value
-    chown gps system /sys/class/gpio/gpio315/value
-
+    write /sys/class/gpio/export 189              # GPS reset
+    write /sys/class/gpio/export 188              # GPS standby
+    write /sys/class/gpio/gpio189/direction out
+    write /sys/class/gpio/gpio188/direction out
+    write /sys/class/gpio/gpio189/value 1
+    write /sys/class/gpio/gpio188/value 0
     write /dev/ttyS3 123456
+
+    chmod 0664 /sys/class/gpio/gpio188/value
+    chown gps system /sys/class/gpio/gpio188/value
+
     chmod 0664 /dev/ttyS3
     chown gps system /dev/ttyS3
 
-    mkdir /data/gps 770 gps system
+    mkdir /data/gps 775 gps system
     chown gps system /data/gps
 
 
