--- a/rootdir/init.rk30board.rc
+++ b/rootdir/init.rk30board.rc
@@ -1,3 +1,4 @@
+import init.device.rc
 import init.rk30board.usb.rc
 
 on init
@@ -91,24 +92,6 @@ on boot
     chmod 0220 /proc/bluetooth/sleep/btwrite
     chown bluetooth net_bt_stack /proc/bluetooth/sleep/lpm
     chown bluetooth net_bt_stack /proc/bluetooth/sleep/btwrite
-    
-    # GPS
-    write /sys/class/gpio/export 189              # GPS reset
-    write /sys/class/gpio/export 188              # GPS standby
-    write /sys/class/gpio/gpio189/direction out
-    write /sys/class/gpio/gpio188/direction out
-    write /sys/class/gpio/gpio189/value 1
-    write /sys/class/gpio/gpio188/value 0
-    write /dev/ttyS3 123456
-
-    chmod 0664 /sys/class/gpio/gpio188/value
-    chown gps system /sys/class/gpio/gpio188/value
-
-    chmod 0664 /dev/ttyS3
-    chown gps system /dev/ttyS3
-
-    mkdir /data/gps 775 gps system
-    chown gps system /data/gps
 
 
 # Rockchip specific commands
@@ -219,11 +202,3 @@ on property:sys.gmali.performance=video
 service pat_video /system/bin/performance video
     disabled
     oneshot
-
-# GPS daemon
-service gps-daemon /system/bin/glgps -c /system/etc/gps/gpsconfig.xml
-    class main
-    socket gps seqpacket 0660 gps system
-    socket rilgps.socket seqpacket 0660 gps system
-    user gps
-    group system inet sdcard_rw
